# persistent_hashmap

./: Cargo.toml  README.md  search-index.js
benches/: bench.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
persistent_hashmap/: enum.InsertError.html  index.html  sidebar-items.js  struct.PersistentHashmap.html
src/: lib.rs
src/persistent_hashmap/src/: lib.rs.html
tests/: test.rs
