[package]
name = "persistent_hashmap"
version = "0.2.2"
authors = ["Jonathan Nilsson <l.a.jonathan.nilsson@gmail.com>"]
license = "MIT"
repository = "https://github.com/JoNil/persistent_hashmap"
documentation = "https://jonil.github.io/persistent_hashmap/persistent_hashmap/index.html"
description = "Persistent hashmap is a library for working with memory mapped hashmaps"
readme = "README.md"

exclude = [
  ".gitignore",
  ".travis.yml",
]

[features]
use_clippy = ["clippy"]

[dependencies]
num = "*"
persistent_array = "*"
twox-hash = "*"

[dependencies.clippy]
version = "*"
optional = true